--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    Rosvel Servicios
+    Rosvel Servicios S. A. de C. V.<br>
+    Todo en imanes y aplicaciones magneticas 
 </body>
 </html>
